--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my third github repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h3>First News Hading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus tempora dolorum commodi consequuntur provident a maiores magnam, error tenetur cumque, doloremque soluta ad mollitia totam ipsam iure magni voluptatem minima!</p>
+    </div>
+    <div>
+        <h3>Second News Hading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus tempora dolorum commodi consequuntur provident a maiores magnam, error tenetur cumque, doloremque soluta ad mollitia totam ipsam iure magni voluptatem minima!</p>
+    </div>
+    <div>
+        <h3>Third News Hading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus tempora dolorum commodi consequuntur provident a maiores magnam, error tenetur cumque, doloremque soluta ad mollitia totam ipsam iure magni voluptatem minima!</p>
+    </div>
     
 </body>
 </html>
