--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <h3>Third News Hading</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus tempora dolorum commodi consequuntur provident a maiores magnam, error tenetur cumque, doloremque soluta ad mollitia totam ipsam iure magni voluptatem minima!</p>
     </div>
-    
+    <div>
+        <h3>ABDULLAH AL FATTAH</h3>
+        <img src="images/abdullahalfattah.jpg" alt="ABDULLAH AL FATTAH">
+    </div>
 </body>
 </html>
