--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div>
         <h3>ABDULLAH AL FATTAH</h3>
-        <img src="images/abdullahalfattah.jpg" alt="ABDULLAH AL FATTAH">
+        <img src="images/abdullahalfattah.jpg" alt="ABDULLAH AL FATTAH" width="500px" height="500px" >
     </div>
 </body>
 </html>
